{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 24,
  "lineage": "1f717e85-d0a3-c408-6368-35bccdae7dbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "jm-153622-Rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813720570167:route-table/rtb-068eb432f85dc7c5a",
            "default_route_table_id": "rtb-068eb432f85dc7c5a",
            "id": "rtb-068eb432f85dc7c5a",
            "owner_id": "813720570167",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043ee26190f8066f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-actuacionenclase"
            },
            "tags_all": {
              "Name": "rt-actuacionenclase"
            },
            "vpc_id": "vpc-034884d6c4e8e1040"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jm-153622-vpc",
            "aws_internet_gateway.jm-153622-ig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "despliegue_actuacionenclase",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e87074e52e6c9f9",
            "arn": "arn:aws:ec2:us-east-1:813720570167:instance/i-0d4f013315b6d80a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4f013315b6d80a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-prueba1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fa5bb0827277ce87",
            "private_dns": "ip-172-31-22-151.ec2.internal",
            "private_ip": "172.31.22.151",
            "public_dns": "ec2-3-87-80-110.compute-1.amazonaws.com",
            "public_ip": "3.87.80.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec8ad95f10c1e8e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-46cef90b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-981e3d97"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jm-153622-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813720570167:internet-gateway/igw-043ee26190f8066f5",
            "id": "igw-043ee26190f8066f5",
            "owner_id": "813720570167",
            "tags": {
              "Name": "ig_actuacionenclase"
            },
            "tags_all": {
              "Name": "ig_actuacionenclase"
            },
            "vpc_id": "vpc-034884d6c4e8e1040"
          },
          "dependencies": [
            "aws_vpc.jm-153622-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813720570167:security-group/sg-0e15d2c08a9a4afe3",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e15d2c08a9a4afe3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ssh",
            "name_prefix": "",
            "owner_id": "813720570167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-034884d6c4e8e1040"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jm-153622-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jm-153622-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813720570167:subnet/subnet-06e00d856c0de3cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06e00d856c0de3cf7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "813720570167",
            "tags": {
              "Name": "subnet_actuacionenclase"
            },
            "tags_all": {
              "Name": "subnet_actuacionenclase"
            },
            "vpc_id": "vpc-034884d6c4e8e1040"
          },
          "dependencies": [
            "aws_vpc.jm-153622-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jm-153622-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:813720570167:vpc/vpc-034884d6c4e8e1040",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ca06374fdf61bfe",
            "default_route_table_id": "rtb-068eb432f85dc7c5a",
            "default_security_group_id": "sg-09440b91a76923519",
            "dhcp_options_id": "dopt-f3015d89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-034884d6c4e8e1040",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068eb432f85dc7c5a",
            "owner_id": "813720570167",
            "tags": {
              "Name": "vpc_actuacionenclase"
            },
            "tags_all": {
              "Name": "vpc_actuacionenclase"
            }
          }
        }
      ]
    }
  ]
}